# ceedling_examples

./: .gitignore  CMakeLists.txt
false_positives/src/: top_module.c  top_module.h
false_positives/test/: test_top_module.c
minimum/: CMakeLists.txt  project.yml
minimum/test/: TestMain.c
src/: main.c
with_mocking/: CMakeLists.txt  get_coverage_report.sh  project.yml
with_mocking/src/: lower_module.c  lower_module.h  main.c  main.h  subf.c  subf.h  top_module.c  top_module.h
with_mocking/test/: TestMain.c  test_top_module.c
without_mocking/src/: top_module.c  top_module.h
without_mocking/test/: test_top_module.c
